database/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gabriella-db
  namespace: grupp5
  labels:
    app: gabriella-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gabriella-db
  template:
    metadata:
      labels:
        app: gabriella-db
    spec:
      securityContext:
        fsGroup: 26
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: postgres
        image: quay.io/fedora/postgresql-16:latest
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            -ALL
        ports:
        - containerPort: 5432
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        volumeMounts:
        - name: gabriella-db-storage
          mountPath: /var/lib/pgsql/data
      volumes:
      - name: gabriella-db-storage
        persistentVolumeClaim:
          claimName: gabriella-db-pvc
